# hikaru

./: .dockerignore  .gitignore  BACKEND_VERIFICATION_FINDINGS.md  CLAUDE.md  DESIGN_COLORS.md  DESIGN_IMPLEMENTATION.md  DESIGN_QUICK_REFERENCE.md  DESIGN_README.md  DESIGN_SUMMARY.md  DESIGN_SYSTEM.md  DESIGN_VISUAL_GUIDE.md  DOCUMENTATION_INDEX.md  Dockerfile  PHASE_8_COMPLETE.md  PROGRESS.md  README.md  WEEK4_STATUS.md
backend/: .env.example  NEXT_STEPS.md  PHASE_1_COMPLETE.md  PHASE_2_PROGRESS.md  README.md  REFACTORING_ROADMAP.md  coverage.json  endpoint_verification_results.txt  pyproject.toml  requirements.txt  test_week4_endpoints.sh  verify_endpoints.py
backend/alembic/: env.py
backend/alembic/versions/: 37c3e9e2df93_create_users_sessions_and_uploads_tables.py  3fbe19e756e4_add_analysis_to_files.py  74e0e751bbf4_add_integrations_table.py  83ae3a97c719_add_conversation_tables_for_ai_assistant.py  9cfb7d62d350_add_project_file_filerelationship_and_.py  acb519f26bbe_add_chart_insights_table_for_on_demand_.py  bb3e5a3d2e96_add_file_analyses_table.py  d405530b1a70_add_sheet_support.py
backend/app/: config.py  database.py  main.py  storage.py
backend/app/api/: dependencies.py
backend/app/api/routes/: analytics.py  analyze.py  assistant.py  auth.py  compare.py  dashboards.py  export.py  history.py  insights.py  integrations.py  merge.py  projects.py  query.py  reports.py  upload.py
backend/app/core/: encryption.py  exception_handlers.py  exceptions.py  file_validation.py  rate_limit.py
backend/app/middleware/: auth.py  security_headers.py
backend/app/models/: database.py  schemas.py
backend/app/services/: ai_analysis_service.py  ai_assistant_service.py  ai_conversation_service.py  ai_insight_service.py  ai_service.py  analysis_service.py  auth_service.py  cache_service.py  chart_generator.py  comparison_service.py  data_processor.py  export_service.py  integration_service.py  merge_service.py  project_service.py  report_service.py  upload_service.py
backend/scripts/: README.md  encrypt_existing_tokens.py  seed.py
backend/scripts/sample_data/: employees.csv  products.csv  sales_q4.csv
backend/storage/reports/metadata/: report_5758b3c7-8fff-4b09-b7f4-d859e0761705.json
backend/tests/: conftest.py
backend/tests/fixtures/: factories.py  sample_data.csv
backend/tests/integration/test_routes/: test_analyze.py  test_auth.py  test_upload.py
backend/tests/unit/: test_config.py  test_schemas.py  test_storage.py
backend/tests/unit/test_api/: test_dependencies.py
backend/tests/unit/test_api/test_routes/: test_analytics.py  test_analyze.py  test_assistant.py  test_compare.py  test_dashboards.py  test_export.py  test_history.py  test_insights.py  test_integrations.py  test_merge.py  test_projects.py  test_query.py  test_reports.py
backend/tests/unit/test_core/: test_encryption.py  test_exception_handlers.py  test_exceptions.py  test_file_validation.py  test_rate_limit.py
backend/tests/unit/test_middleware/: test_auth.py
backend/tests/unit/test_services/: test_ai_analysis_service.py  test_ai_conversation_service.py  test_ai_insight_service.py  test_analysis_service.py  test_auth_service.py  test_cache_service.py  test_chart_generator.py  test_comparison_service.py  test_data_processor.py  test_data_processor_validation.py  test_export_service.py  test_integration_service.py  test_merge_service.py  test_project_service.py  test_report_service.py  test_upload_service.py
docs/: CLAUDE_CODE_PROMPT.md  DAY_1_QUICK_START.md  DSB_PRD_v1.1.md  E2E_TESTING_SUMMARY.md  PHASE_5_TESTING_COMPLETE.md  PROJECTS_FEATURE_OVERVIEW.md  README.md
frontend/: .env.development  .env.production  (+13 more)
(+396 files in other folders)
